refactor to new inspect cyber setup

--- a/chap_background.tex
+++ b/chap_background.tex
@@ -4,13 +4,13 @@
 
 \section{Mild Traumatic Brain Injury}
 
-Mild traumatic brain injury (\ab{mtbi}), also known as concussion, is clinically defined by the American Congress of Rehabilitation Medicine using three primary criteria: a \ab{gcs} score of 13-15 assessed 30 minutes post-injury, loss of consciousness lasting less than 30 minutes, and post-traumatic amnesia persisting for less than 24 hours~\cite{concussion_statpearls, gcs_statpearls}. These criteria distinguish mild from moderate (\ab{gcs} 9-12) and severe TBI (\ab{gcs} 3-8), though the term "mild" can be misleading, as patients may experience significant disability despite classification as mild.
+Mild traumatic brain injury (\ab{mtbi}), also known as concussion, is clinically defined by the American Congress of Rehabilitation Medicine using three primary criteria: a \ab{gcs} score of 13-15 assessed 30 minutes post-injury, loss of consciousness lasting less than 30 minutes, and post-traumatic amnesia persisting for less than 24 hours~\cite{silverberg2023acrm}. These criteria distinguish mild from moderate (\ab{gcs} 9-12) and severe TBI (\ab{gcs} 3-8), though the term "mild" can be misleading, as patients may experience significant disability despite classification as mild.
 
-The dominant pathological feature of \ab{mtbi} is \ab{dai}, describing widespread microscopic damage to axons throughout the brain~\cite{johnson2013axonal, dai_statpearls}. Unlike focal contusions visible on conventional imaging, \ab{dai} involves disruption of white matter tracts that is typically invisible on CT or standard MRI. An estimated 80-90\% of \ab{mtbi} cases show no visible lesions on conventional neuroimaging, creating a "clinical-radiological paradox" wherein patients with normal structural imaging may exhibit significant symptoms and neurocognitive impairments~\cite{palacios2022dti}.
+The dominant pathological feature of \ab{mtbi} is \ab{dai}, describing widespread microscopic damage to axons throughout the brain~\cite{johnson2013axonal}. Unlike focal contusions visible on conventional imaging, \ab{dai} involves disruption of white matter tracts that is typically invisible on CT or standard MRI. The majority of \ab{mtbi} cases show no visible lesions on conventional neuroimaging, creating a "clinical-radiological paradox" wherein patients with normal structural imaging may exhibit significant symptoms and neurocognitive impairments~\cite{lee2005neuroimaging, palacios2022dti}.
 
 \ab{dai} occurs through rapid acceleration-deceleration and rotational forces applied to the brain during impacts. Axonal microtubules are susceptible to mechanical breaking and misalignment when subjected to shear forces. The white matter tracts most commonly affected include the corpus callosum, internal capsule, corona radiata, and cerebellar peduncles, with advanced imaging techniques such as diffusion tensor imaging (DTI) revealing elevated diffusivity and decreased fractional anisotropy in these regions~\cite{palacios2022dti}.
 
-Brainstem and midbrain structures demonstrate particular susceptibility to \ab{dai} due to their anatomical positioning at the interface between the rigid skull base and mobile cerebral hemispheres. These regions house critical nuclei for autonomic and oculomotor control, including the oculomotor nucleus, Edinger-Westphal nucleus (controlling pupillary constriction), and mesencephalic reticular formation (controlling vergence eye movements). Damage to these structures provides the mechanistic basis for oculomotor dysfunction as a biomarker of \ab{mtbi}~\cite{johnson2013axonal}.
+Brainstem and midbrain structures demonstrate particular susceptibility to \ab{dai} due to their anatomical positioning at the interface between the rigid skull base and mobile cerebral hemispheres. These regions house critical nuclei for autonomic and oculomotor control, including the oculomotor nucleus, Edinger-Westphal nucleus (controlling pupillary constriction), and mesencephalic reticular formation (controlling vergence eye movements). The midbrain's narrow dimensions and differential sensitivity to rotational loading make it particularly vulnerable, with the corticospinal tract at the midbrain level carrying fibers related to oculomotor function. This vulnerability provides the mechanistic basis for the high prevalence of oculomotor dysfunction as a biomarker of \ab{mtbi}~\cite{hirad2019neural}.
 
 
 \section{Existing Diagnostic Approaches}
@@ -19,15 +19,15 @@ When an individual presents to medical care following head injury, clinicians em
 
 \subsection{Clinical Diagnosis and Neuroimaging}
 
-Mild traumatic brain injury remains fundamentally a clinical diagnosis. The 2023 American Congress of Rehabilitation Medicine diagnostic criteria require a plausible mechanism of injury plus evidence of acute brain dysfunction within 72 hours, including loss of consciousness, post-traumatic amnesia, disorientation, transient neurological abnormalities, or \ab{gcs} score of 13-15~\cite{silverberg2023acrm}. However, the clinical-radiological paradox presents a fundamental challenge: 80-90\% of \ab{mtbi} patients demonstrate normal findings on conventional neuroimaging despite experiencing significant symptoms and neurocognitive impairments~\cite{palacios2022dti}.
+Mild traumatic brain injury remains fundamentally a clinical diagnosis. The 2023 American Congress of Rehabilitation Medicine diagnostic criteria require a plausible mechanism of injury plus evidence of acute brain dysfunction within 72 hours, including loss of consciousness, post-traumatic amnesia, disorientation, transient neurological abnormalities, or \ab{gcs} score of 13-15~\cite{silverberg2023acrm}. However, the clinical-radiological paradox presents a fundamental challenge: the majority of \ab{mtbi} patients demonstrate normal findings on conventional neuroimaging despite experiencing significant symptoms and neurocognitive impairments~\cite{lee2005neuroimaging, palacios2022dti}.
 
-CT scanning represents first-line imaging in emergency settings, providing rapid identification of life-threatening pathology requiring neurosurgical intervention~\cite{stiell2001ct, haydel2000ct}. However, approximately 80-90\% of \ab{mtbi} patients present with negative CT scans, as microscopic white matter disruption produces no visible density changes~\cite{lee2008neuroimaging}. MRI demonstrates higher sensitivity, with 27-29\% of CT-negative patients showing abnormalities including microhemorrhages and contusions~\cite{yuh2013mri, huang2024mri}, yet most \ab{mtbi} cases remain invisible even on MRI. Advanced diffusion tensor imaging can detect white matter microstructural changes~\cite{palacios2022dti}, but remains predominantly a research tool with limited clinical availability. This imaging insensitivity underscores the need for functional biomarkers capable of detecting physiological disruption in structurally normal-appearing brains.
+CT scanning represents first-line imaging in emergency settings, providing rapid identification of life-threatening pathology requiring neurosurgical intervention~\cite{stiell2001ct, haydel2000ct}. However, the majority of \ab{mtbi} patients present with negative CT scans, as microscopic white matter disruption produces no visible density changes~\cite{lee2005neuroimaging}. MRI demonstrates higher sensitivity, with approximately 28\% of CT-negative patients showing abnormalities including microhemorrhages and contusions~\cite{yuh2013mri}, yet most \ab{mtbi} cases remain invisible even on MRI. Advanced diffusion tensor imaging can detect white matter microstructural changes~\cite{palacios2022dti}, but remains predominantly a research tool with limited clinical availability. This imaging insensitivity underscores the need for functional biomarkers capable of detecting physiological disruption in structurally normal-appearing brains.
 
 \subsection{Clinical Assessment Batteries and Emerging Biomarkers}
 
-Standardised clinical assessment tools provide structured evaluation of symptoms, cognition, and balance. The \ab{scat6} combines symptom inventories, cognitive screening, neurological examination, and balance testing for healthcare professionals, while the Concussion Recognition Tool 6 offers simplified observational screening for non-medical personnel~\cite{echemendia2023scat6, echemendia2023crt6}. However, systematic reviews demonstrate highly variable diagnostic performance, with sensitivity ranging from 13-92\% across different assessment components~\cite{nelson2016diagnostic}. These tools suffer from fundamental limitations: subjective symptom reporting vulnerable to minimisation, effort-dependent cognitive testing, and balance assessments affected by baseline athletic ability~\cite{meier2015underreporting, olson2016interrater}.
+Standardised clinical assessment tools provide structured evaluation of symptoms, cognition, and balance. The \ab{scat6} combines symptom inventories, cognitive screening, neurological examination, and balance testing for healthcare professionals, while the Concussion Recognition Tool 6 offers simplified observational screening for non-medical personnel~\cite{echemendia2023scat6, echemendia2023crt6}. However, systematic reviews of concussion assessment tools demonstrate highly variable diagnostic performance, with sensitivity ranging from 13-92\% across different components~\cite{nelson2013diagnostic}. These tools suffer from fundamental limitations: subjective symptom reporting vulnerable to minimisation, effort-dependent cognitive testing, and balance assessments affected by baseline athletic ability~\cite{meier2015underreporting, olson2016interrater}.
 
-Emerging objective biomarkers include blood-based tests and quantitative pupillometry. The FDA-cleared combination of GFAP and UCH-L1 serum biomarkers demonstrated 97.5\% sensitivity but only 36.5\% specificity for predicting CT abnormalities, serving a triage function to reduce unnecessary imaging~\cite{fda2018banyan, bazarian2018blood}. However, blood biomarkers require venipuncture and laboratory infrastructure. Commercial quantitative pupillometry devices provide automated measurement of pupillary responses~\cite{boulter2021expanding}, but cost thousands of pounds, require medical facility deployment, and assess only single-parameter function rather than multi-modal oculomotor performance.
+Emerging objective biomarkers include blood-based tests and quantitative pupillometry. The FDA-cleared combination of GFAP and UCH-L1 serum biomarkers demonstrated 97.5\% sensitivity but only approximately 40\% specificity for predicting CT abnormalities, serving a triage function to reduce unnecessary imaging~\cite{fda2018banyan, bazarian2018blood}. However, blood biomarkers require venipuncture and laboratory infrastructure. Commercial quantitative pupillometry devices provide automated measurement of pupillary responses~\cite{boulter2021expanding}, but cost thousands of pounds, require medical facility deployment, and assess only single-parameter function rather than multi-modal oculomotor performance.
 
 \subsection{Synthesis: The Screening Gap}
 
@@ -46,13 +46,13 @@ Oculomotor biomarkers offer several advantages over conventional symptom-based a
 
 The pupillary light reflex (\ab{plr}) involves coordinated parasympathetic and sympathetic pathways that regulate pupil diameter in response to changing light conditions. The pathway traverses from retinal photoreceptors through the optic nerve to the pretectal nucleus, then bilaterally to both Edinger-Westphal nuclei in the dorsolateral midbrain. Efferent fibres travel via cranial nerve III to the ciliary ganglion and ultimately innervate the pupil sphincter muscle, producing constriction~\cite{ciuffreda2017plr}.
 
-The extensive anatomical distribution of \ab{plr} pathways creates multiple points of vulnerability to traumatic injury. Diffuse axonal injury affects brainstem structures, particularly the dorsolateral midbrain and upper pons, regions containing the Edinger-Westphal nucleus and sympathetic descending pathways. Shearing forces during head acceleration can disrupt these structures, resulting in altered pupillary dynamics~\cite{boulter2021expanding}.
+The extensive anatomical distribution of \ab{plr} pathways creates multiple points of vulnerability to traumatic injury. Diffuse axonal injury affects brainstem structures, particularly the dorsolateral midbrain and upper pons, regions containing the Edinger-Westphal nucleus and sympathetic descending pathways. Shearing forces during head acceleration can disrupt these structures, resulting in altered pupillary dynamics~\cite{bruggeman2020tai}.
 
 \subsubsection{Research Evidence}
 
 Master and colleagues conducted a landmark study examining \ab{plr} metrics in 98 adolescent athletes with sport-related concussion compared to 134 healthy controls. Using quantitative pupillometry at a median of 12 days post-injury, they found that eight of nine \ab{plr} parameters differed significantly between groups. Concussed athletes demonstrated larger maximum pupil diameter (4.83 mm vs 4.01 mm), faster peak constriction velocity (4.88 mm/s vs 3.91 mm/s), and prolonged recovery time. Maximum pupil diameter and peak constriction velocity achieved \ab{auc} values of 0.78 for discrimination~\cite{master2020pupillary}.
 
-Ciuffreda and colleagues found that 5-8 of 9 \ab{plr} parameters showed statistical differences between \ab{mtbi} and control groups for any given test condition. The most diagnostically useful parameters included constriction latency (194-214 ms in \ab{mtbi} vs 182-199 ms in controls), baseline diameter, response amplitude, and recovery times. Combined analysis achieved \ab{auc} of 0.78 with 78.1\% sensitivity~\cite{ciuffreda2017plr}.
+Ciuffreda and colleagues found that 5-8 of 9 \ab{plr} parameters showed statistical differences between \ab{mtbi} and control groups for any given test condition. The most diagnostically useful parameters included constriction latency (194-214 ms in \ab{mtbi} vs 182-199 ms in controls), baseline diameter, response amplitude, and recovery times~\cite{ciuffreda2017plr}.
 
 Recent advances in smartphone-based pupillometry with machine learning have demonstrated diagnostic accuracy approaching specialised medical devices. A study of 93 Division I football players achieved 91\% overall accuracy, 98\% sensitivity, and 84.2\% specificity with \ab{auc} of 0.91 using seven \ab{plr} parameters analysed with machine learning models~\cite{maxin2024smartphone}. These results demonstrate the feasibility of accessible, smartphone-based \ab{mtbi} screening with research-grade diagnostic performance.
 
@@ -62,13 +62,13 @@ Recent advances in smartphone-based pupillometry with machine learning have demo
 
 Smooth pursuit eye movements maintain visual fixation on moving targets by matching eye velocity to target velocity. Smooth pursuit involves a distributed neural network spanning cortical areas (visual motion processing in area MT/V5, motor planning in frontal eye fields), pontine nuclei serving as relay stations, and cerebellar structures (flocculus and paraflocculus) that generate appropriate motor commands. Cerebellar output projects to the medial vestibular nucleus, which drives extraocular motor neurons controlling eye movement execution~\cite{mcdonald2022eye}.
 
-This extensive pathway traverses multiple white matter tracts susceptible to \ab{dai}, including the corona radiata, internal capsule, pontocerebellar pathways, and cerebellar peduncles. Diffusion tensor imaging studies provide direct evidence of structural damage to smooth pursuit pathways: one study found that 89\% of post-concussion athletes showed abnormal axial diffusivity in at least one cerebellar peduncle tract, with 61\% showing abnormalities in the middle cerebellar peduncle carrying corticopontocerebellar fibres essential for smooth pursuit~\cite{mallott2019cerebellar}.
+This extensive pathway traverses multiple white matter tracts susceptible to \ab{dai}, including the corona radiata, internal capsule, pontocerebellar pathways, and cerebellar peduncles. Diffusion tensor imaging studies provide direct evidence of structural damage to smooth pursuit pathways: one study found that 89\% of post-concussion athletes showed abnormal axial diffusivity in at least one white matter tract, with 61\% showing abnormalities specifically in the middle cerebellar peduncle carrying corticopontocerebellar fibres essential for smooth pursuit~\cite{mallott2019cerebellar}.
 
 \subsubsection{Research Evidence}
 
-Dysfunction in smooth pursuit has been documented in 43-60\% of \ab{mtbi} patients. Within 24-48 hours post-concussion, Division I athletes demonstrated significantly reduced smooth pursuit velocity (14.24±2.31 degrees/second vs 17.86±5.75 degrees/second in controls, p=0.019, Cohen's d=0.83), with increased saccadic amplitude and velocity to compensate for reduced pursuit. These large effect sizes demonstrate clinically meaningful impairment~\cite{murray2019smooth}.
+Within 24-48 hours post-concussion, Division I athletes demonstrated significantly reduced smooth pursuit velocity (14.24±2.31 degrees/second vs 17.86±5.75 degrees/second in controls, p=0.019, Cohen's d=0.83), with increased saccadic amplitude and velocity to compensate for reduced pursuit. These large effect sizes demonstrate clinically meaningful impairment~\cite{murray2019smooth}.
 
-An important enhancement to smooth pursuit assessment involves dual-task paradigms combining eye tracking with concurrent cognitive load. Studies using concurrent working memory tasks (n-back paradigms) have shown substantial improvements in diagnostic discrimination. Baseline smooth pursuit identified 58\% of patients, but adding a concurrent 2-back working memory task increased identification to 79\%. The \ab{auc} for radial variability increased from 0.88 at baseline to 0.946 with cognitive load, achieving excellent discrimination~\cite{stubbs2019working}.
+An important enhancement to smooth pursuit assessment involves dual-task paradigms combining eye tracking with concurrent cognitive load. Studies using concurrent working memory tasks (n-back paradigms) have shown substantial improvements in diagnostic discrimination. Baseline smooth pursuit identified 58\% of patients, but adding a concurrent 2-back working memory task increased identification to 79\%. The \ab{auc} for radial variability increased from 0.88 at baseline to 0.946 with cognitive load, achieving excellent discrimination~\cite{stubbs2018working}.
 
 Smooth pursuit within 7 days of injury shows robust discriminative ability, establishing it as a valuable component of multi-modal assessment~\cite{hunfalvay2021smooth}.
 
@@ -76,7 +76,7 @@ Smooth pursuit within 7 days of injury shows robust discriminative ability, esta
 
 \subsubsection{Mechanism and Pathophysiology}
 
-Vergence eye movements enable binocular vision by coordinating the eyes to converge (move inward) or diverge (move outward) when shifting gaze between near and far targets. Vergence control involves the mesencephalic reticular formation (MRF) located dorsolateral to the oculomotor nucleus, which contains vergence premotor neurons that encode vergence angle and velocity. These neurons project directly to medial rectus motoneurons in the oculomotor nucleus. Cerebellar structures, particularly the caudal fastigial nucleus, also contribute to vergence control~\cite{alvarez2021vergence}.
+Vergence eye movements enable binocular vision by coordinating the eyes to converge (move inward) or diverge (move outward) when shifting gaze between near and far targets. Vergence control involves the mesencephalic reticular formation (MRF) located dorsolateral to the oculomotor nucleus, which contains vergence premotor neurons that encode vergence angle and velocity. These neurons project directly to medial rectus motoneurons in the oculomotor nucleus. Cerebellar structures, particularly the caudal fastigial nucleus, also contribute to vergence control~\cite{searle2016vergence}.
 
 Vergence dysfunction in \ab{mtbi} reflects disruption across this distributed network. Rotational acceleration generates focal shear stresses at the mesencephalic and pontine levels, affecting vergence control structures. Convergence insufficiency, the inability to adequately converge the eyes for near work, represents one of the most prevalent oculomotor dysfunctions in \ab{mtbi}~\cite{yaramothu2019vergence, wiecek2021vergence}.
 
@@ -88,11 +88,11 @@ Clinical assessment using \ab{npc} measurement shows robust diagnostic utility. 
 
 Convergence insufficiency correlates significantly with neurocognitive deficits, establishing that vergence dysfunction reflects broader cognitive impairment. Concussed athletes with convergence insufficiency demonstrated significantly worse verbal memory, visual motor speed, and reaction time compared to concussed athletes with normal \ab{npc}. \ab{npc} distance contributed an additional 13.6\% variance in reaction time after controlling for age and symptoms (p<0.001)~\cite{pearce2015npc}.
 
-Prognostic value has been established in multiple studies. Athletes with convergence insufficiency showed 12.3-fold increased odds of prolonged recovery (≥28 days), with mean recovery time of 51.6±53.9 days versus 19.2±14.7 days in the normal \ab{npc} group. In emergency department patients, higher convergence insufficiency scores predicted 30-day post-concussion syndrome (p<0.0001, R²=36\%)~\cite{devani2024convergence}.
+Prognostic value has been established in multiple studies. Athletes with convergence insufficiency showed 12.3-fold increased odds of prolonged recovery (≥28 days), with mean recovery time of 51.6±53.9 days versus 19.2±14.7 days in the normal \ab{npc} group~\cite{duprey2017convergence}. In emergency department patients, convergence insufficiency scores significantly predicted post-concussion syndrome development, with a multivariate model achieving strong predictive performance (p<0.0001, R²=36\%)~\cite{devani2024convergence}.
 
 \subsection{Rationale for Multi-Modal Assessment}
 
-While each oculomotor biomarker demonstrates diagnostic utility independently, multi-parameter assessment combining PLR, smooth pursuit, and vergence provides superior performance. Different biomarkers may be differentially affected depending on the specific white matter tracts and neural structures damaged in a given patient's injury. Multi-modal assessment increases sensitivity by detecting abnormality when any single parameter is impaired, while maintaining specificity through algorithms that integrate information across parameters. Studies using combined oculomotor batteries have achieved accuracies of 91-94\%, exceeding the performance of any single biomarker~\cite{kelly2019combined, maxin2024smartphone}.
+While each oculomotor biomarker demonstrates diagnostic utility independently, multi-parameter assessment combining PLR, smooth pursuit, and vergence provides superior performance. Different biomarkers may be differentially affected depending on the specific white matter tracts and neural structures damaged in a given patient's injury. Multi-modal assessment increases sensitivity by detecting abnormality when any single parameter is impaired, while maintaining specificity through algorithms that integrate information across parameters. Video-oculography assessment of combined oculomotor parameters achieved 91\% accuracy with 90\% sensitivity and 89\% specificity, while smartphone-based multi-parameter pupillometry achieved 91\% accuracy with 98\% sensitivity and 84\% specificity~\cite{kelly2019combined, maxin2024smartphone}.
 
 
 \section{Smartphone Implementation Feasibility}
