--- a/chap_commercialisation.tex
+++ b/chap_commercialisation.tex
@@ -7,51 +7,70 @@
 
 \section{Market Opportunity and Landscape}
 
-% TODO: Analyse the market size and opportunity
-% - Global incidence of mTBI (sports, military, general population)
-% - Current market size for mTBI assessment tools
-% - Market growth projections
-% - Unmet clinical needs
-% - Target market segments (sports teams, schools, military, emergency departments)
+\todo{DRAFT NOTES - To be structured and referenced properly}
+
+\textbf{Youth and Amateur Sport Underdiagnosis}
+
+In youth and amateur sport, the data make the problem really obvious. In one study of 328 athletes, only 8.56\% said they'd actually had a concussion diagnosed in the previous season — but almost half of them kept playing while they were having post-impact concussion symptoms. That's a huge gap between symptoms and diagnosis, and it strongly suggests a cultural/sporting incentive to avoid formal diagnosis because a confirmed concussion usually means a mandatory rest period (often ~2 weeks), which coaches don't want to trigger.\footnote{Source: Social Science \& Medicine (2015) DOI: 10.1016/j.socscimed.2015.04.004}
+
+That lines up with UK evidence: the UK Parliamentary inquiry on concussion in sport notes that over 50\% of concussions outside the elite game go unreported or undiagnosed, meaning the undercount isn't because people aren't getting hit — it's because the system isn't set up to catch it, especially when nobody on the touchline is medically trained.\footnote{UK Parliament Committees}
+
+At the same time, the highest injury burden is actually in kids: in Oxfordshire, children aged 0–19 make up 47.4\% of all sports-injury A\&E attendances, with the peak at 14 for boys and 12 for girls.\footnote{NHS Oxfordshire pilot; see summaries on PMC/ResearchGate} So the level of sport that has the most injuries is also the level that has the least medical cover and the strongest incentive not to diagnose.
+
+And commercially, this sits in a market that's already spending money on safety: the global sports-protective equipment market is about \$9.4B (2023) and growing 5–6\% CAGR, according to Grand View Research and Global Market Insights — so there's room for a youth-level, parent-oriented, low-cost concussion screening device.
 
 
 \section{Competitor Analysis}
 
-% TODO: Review existing commercial solutions
-% - Traditional pupillometry devices (cost, portability limitations)
-% - Smartphone-based solutions (PupilScreen, etc.)
-% - Other mTBI assessment tools (King-Devick, ImPACT, etc.)
-% - Competitive advantages of our solution
-% - Market positioning
+\subsection{BrainEye (AFL, 2025)}
+
+BrainEye is a smartphone-based eye-tracking system tested on 348 Australian Rules footballers across 10 clubs; it runs pupillary light reflex, smooth pursuit, near-point convergence and horizontal gaze nystagmus, and when PLR and pursuit are combined it reached 100\% sensitivity and 85\% specificity for clinically diagnosed concussion — but teams said the hardware set-up was a bit fussy, so a simpler, parent-operated version would be easier to adopt.\footnote{Sports Medicine Open (2025) DOI: 10.1186/s40798-025-00819-8}
+
+\subsection{Reflex (BrightLamp)}
+
+Reflex turns an iPhone/iPad into a mobile pupillometer that records PLR metrics (latency, \% constriction, dilation) in a few seconds and has been used in concussion and autonomic screening, but it is marketed mainly to clinics and providers rather than to grassroots parents standing on a pitch.\footnote{BrightLamp: \url{https://brightlamp.org}}
+
+\subsection{PupilScreen (University of Washington)}
+
+PupilScreen is a research prototype that shows a normal phone camera and flash, plus ML, can quantify the pupillary light reflex well enough to help with sideline concussion decisions, but it is not a product with a finished workflow for schools or community clubs.
+
+\subsection{SyncThink / NeuroSync (EYE-SYNC)}
+
+SyncThink is an FDA-cleared, VR-style IR eye-tracking system used by pro/college teams and clinicians to assess oculomotor and vestibulo-ocular function after suspected mTBI, proving the biomarker is valid, but it is too expensive and too clinical to hand to a parent or PE teacher.\footnote{SyncThink: \url{https://syncthink.com}}
+
+\subsection{Oculogica EyeBOX}
+
+EyeBOX is an FDA-cleared, 4-minute, eye-movement–based aid to concussion diagnosis for patients aged 5–67, sold into hospitals and specialist centres; it shows regulators accept eye tracking for concussion, but the cost and setting make it unsuitable for a ``one device per school'' model.\footnote{Oculogica: \url{https://www.oculogica.com}}
+
+\subsection{Prevent Biometrics / Smart Mouthguards (incl.\ World Rugby pilots)}
+
+Instrumented mouthguards measure head linear and rotational acceleration at the instant of impact and are being rolled out in elite rugby and American football, but they need one device per athlete and they detect the hit, not whether the player's brain/eyes are actually impaired.\footnote{World Rugby smart mouthguard initiative}
+
+\subsection{HeadCheck Health and Other Protocol Apps}
+
+Products like HeadCheck digitise SCAT and return-to-play procedures and are already used from grassroots to pro levels, showing teams will use structured concussion tools, but they do not measure any physiological signal — someone still has to notice the hit first.\footnote{HeadCheck Health: \url{https://www.headcheckhealth.com}}
 
 
 \section{Target Users and Stakeholders}
 
-% TODO: Identify key users and decision-makers
-% - Primary users (sports physicians, athletic trainers, paramedics)
-% - Secondary users (coaches, parents, military medics)
-% - Decision-makers and purchasers
-% - Key opinion leaders and early adopters
-% - Patient/athlete perspective
+The main target users are under-18 players and the adults around them, because that is the level of sport where regulation and medical cover are weakest. Think of Saturday-morning grassroots football at the local rec, school rugby on a Wednesday, weekend hockey leagues, and community basketball in a sports hall — most of these sessions have no pitch-side physio, no club doctor, and no obligation to run a full SCAT-style concussion protocol, even though the players are still growing and are more vulnerable to repeat injury. In that environment, the people who actually care enough to run a check are the parents on the touchline, the school PE teacher in charge of the fixture, the safeguarding lead who has to log the incident, and sometimes the team manager or club volunteer who has the phone. Coaches are still stakeholders, but they can have a conflict of interest because a positive concussion screen means the player sits out for one or two weeks. That is why the device is aimed first at parents of grassroots under-18s, school PE/sport departments, and community-club organisers, not at already regulated professional teams.
+
+Multiple studies show that parents of youth athletes are willing to act on concussion if they are given a clear, simple tool: they report positive attitudes to concussion reporting and management, but they lack confidence in how to do it.\footnote{PMC, ResearchGate} At the same time, schools are already being told by public-health bodies to remove a player immediately if concussion is suspected and to use recognised concussion resources like CDC HEADS UP, which means there is already an institutional pathway for a quick sideline screening device.\footnote{CDC} So if you offer a parent-operated, 30-second eye-tracking check, you are not trying to create demand from nothing — you are giving parents and schools a way to do what policy is already telling them to do, but faster and more objectively.
 
 
 \section{Business Model and Value Proposition}
 
-% TODO: Define the business model
-% - Revenue model (device sales, subscription, per-test licensing)
-% - Pricing strategy
-% - Value proposition for different stakeholders
-% - Cost structure and unit economics
-% - Distribution channels
-% - Strategic partnerships (sports organizations, healthcare providers)
+Parents and schools of under-18 athletes need a reliable way to check for concussion when no physio is present and symptoms may be delayed. Our solution is a low-cost, shareable headset plus phone app that runs a 30-second eye test (PLR + tracking) and gives a clear traffic-light result. It turns sideline worry into a standard, repeatable screening step that can be shown to coaches or a GP.
+
+The business model combines a one-off hardware sale with recurring software revenue. The hardware is a low-cost, shareable headset or phone mount sold to parents, schools, and grassroots clubs on a ``one device per squad/family'' basis, keeping adoption affordable. The accompanying app is free for basic use (single test, traffic-light result) and offers paid features such as multiple child profiles, baseline storage, 24–48-hour retesting prompts, and PDF exports for schools or GPs on a monthly subscription. Schools and clubs can purchase an annual licence that unlocks a central incident log and standardised return-to-play workflow for all teams. This structure aligns payment with the parties that actually care about detection (parents and schools) while keeping the per-player cost low.
 
 
 \section{Regulatory Considerations}
 
-% TODO: Outline regulatory pathway for medical device approval
-% - Device classification (FDA Class II likely, CE marking requirements)
-% - Clinical validation requirements
-% - Data privacy and security (HIPAA, GDPR compliance)
+As the intended use is to support decisions about removing an under-18 player from sport following a head impact, the system will be regarded as medical device software under UK MHRA guidance and EU MDR Rule 11, and would therefore require UKCA/CE marking before commercial deployment. For the purposes of the 3YP, the system will be used as a research screening tool with explicit non-diagnostic labelling. Post-project work would include formal clinical evaluation and conformity assessment.\footnote{GOV.UK; Regulatory knowledge for medical devices}
+
+% TODO: Add further details on:
+% - Data privacy and security (GDPR compliance)
 % - Quality management system (ISO 13485)
 % - Regulatory timeline and costs
 % - Post-market surveillance requirements
