--- a/chap_introduction.tex
+++ b/chap_introduction.tex
@@ -4,11 +4,11 @@
 
 \section{Clinical Need}
 
-Mild traumatic brain injury (\ab{mtbi}), commonly known as concussion, represents a global public health crisis of staggering magnitude. An estimated 55.9 million people sustain \ab{mtbi} annually worldwide~\cite{dewan2019estimating}. The World Health Organization systematic review indicates that 70-90\% of all traumatic brain injuries are classified as mild, making \ab{mtbi} the dominant category of brain injury~\cite{cassidy2004incidence}. In the United States alone, traumatic brain injury resulted in 2.87 million emergency department visits, hospitalizations, and deaths in 2014, though this figure likely substantially underestimates true burden as many cases never seek medical attention~\cite{peterson2019surveillance}.
+Mild traumatic brain injury (\ab{mtbi}), commonly known as concussion, represents a global public health crisis of staggering magnitude. An estimated 69 million people (95\% confidence interval: 64--74 million) sustain traumatic brain injury annually worldwide~\cite{dewan2019estimating}. The World Health Organization systematic review indicates that 70-90\% of all traumatic brain injuries are classified as mild, making \ab{mtbi} the dominant category of brain injury~\cite{cassidy2004incidence}. In the United States alone, traumatic brain injury resulted in 2.87 million emergency department visits, hospitalizations, and deaths in 2014, though this figure likely substantially underestimates true burden as many cases never seek medical attention~\cite{peterson2019surveillance}.
 
 The problem is particularly acute in grassroots and youth sports, where the vast majority of head injuries occur in settings without medical supervision. Parents, teachers, coaches, and referees serve as first responders to potential head injuries, yet lack access to objective screening tools. These untrained observers must rely on visible signs and athlete self-reporting to make critical decisions about whether medical evaluation is warranted. Research demonstrates the inadequacy of this approach: approximately 50\% of concussions in high school and youth sports are never reported at the time of injury, with athletes failing to recognise the injury as serious or being unwilling to remove themselves from competition~\cite{mccrea2004unreported, registermihalik2013knowledge}. Athletes minimise symptoms to continue playing, and untrained observers cannot detect subtle neurological dysfunction without quantitative measurement tools.
 
-The clinical consequences of missed or delayed diagnosis are severe. Second impact syndrome, occurring when a second head injury is sustained before complete recovery from the initial concussion, results in catastrophic cerebral edema and brain herniation, often proving fatal~\cite{sis_statpearls}. Even without repeated injury, persistent post-concussive syndrome affects 15-25\% of adults following \ab{mtbi}, with up to 50\% of patients experiencing symptoms at three months post-injury. Notably, 27\% are unable to return to their previous level of work at 12 months~\cite{ppcs_statpearls}. Early identification is therefore critical to enable appropriate management, prevent premature return to activities that risk repeated injury, and reduce the likelihood of long-term sequelae.
+The clinical consequences of missed or delayed diagnosis are severe. Second impact syndrome, occurring when a second head injury is sustained before complete recovery from the initial concussion, results in catastrophic cerebral edema and brain herniation, often proving fatal~\cite{sis_statpearls}. Even without repeated injury, post-concussive syndrome affects 15\% of adults following \ab{mtbi}~\cite{ppcs_statpearls}, with up to 50\% of patients experiencing symptoms at three months post-injury. Notably, 27\% are unable to return to their previous level of work at 12 months~\cite{mortaheb2021ppcs}. Early identification is therefore critical to enable appropriate management, prevent premature return to activities that risk repeated injury, and reduce the likelihood of long-term sequelae.
 
 There exists an urgent unmet need for an accessible, objective screening tool deployable at the point of injury by non-medical personnel in grassroots sports settings.
 
