--- a/references.bib
+++ b/references.bib
@@ -95,13 +95,25 @@
 
 @incollection{dai_statpearls,
   title         = {Diffuse Axonal Injury},
-  author        = {Rao, Vikas and Mierzwa, Andrew and Parikh, Geetha},
+  author        = {Mesfin, Fitsum B and Gupta, Nidhi and Shapshak, Alex H and Margetis, Konstantinos},
   booktitle     = {StatPearls},
   publisher     = {StatPearls Publishing},
   address       = {Treasure Island, FL},
   year          = {2024},
   url           = {https://www.ncbi.nlm.nih.gov/books/NBK448102/},
   note          = {[Online; accessed 02-Nov-2025]}
+}
+
+@article{bruggeman2020tai,
+  title         = {Traumatic axonal injury (TAI): definitions, pathophysiology and imaging---a narrative review},
+  author        = {Bruggeman, G F and Haitsma, I K and Dirven, C M F and Volovici, V},
+  journal       = {Acta Neurochirurgica},
+  volume        = {163},
+  number        = {1},
+  pages         = {31--44},
+  year          = {2020},
+  doi           = {10.1007/s00701-020-04594-1},
+  pmid          = {33006648}
 }
 
 %% Pupillary Light Reflex Studies
@@ -129,6 +141,18 @@
   doi           = {10.2217/cnc-2016-0029}
 }
 
+@article{hirad2019neural,
+  title         = {A common neural signature of brain injury in concussion and subconcussion},
+  author        = {Hirad, Adnan A and Bazarian, Jeffrey J and Merchant-Borna, Kian and Garcea, Frank E and Heilbronner, Sarah and Paul, David and Hintz, Eric B and van Wijngaarden, Edwin and Schifitto, Giovanni and Wright, David W and Espinoza, Tamara R and Mahon, Bradford Z},
+  journal       = {Science Advances},
+  volume        = {5},
+  number        = {8},
+  pages         = {eaau3460},
+  year          = {2019},
+  doi           = {10.1126/sciadv.aau3460},
+  pmid          = {31457074}
+}
+
 @article{maxin2024smartphone,
   title         = {Smartphone-Based Pupillometry Using Machine Learning for the Diagnosis of Sports-Related Concussion},
   author        = {Maxin, Alex J and Whelan, Benjamin M and Levitt, Michael R and McGrath, Luke B and Harmon, Kimberly G},
@@ -148,7 +172,7 @@
   pages         = {685313},
   year          = {2021},
   doi           = {10.3389/fneur.2021.685313},
-  pmid          = {34408717}
+  pmid          = {34322081}
 }
 
 %% Smooth Pursuit Studies
@@ -176,7 +200,7 @@
   pmid          = {31191426}
 }
 
-@article{stubbs2019working,
+@article{stubbs2018working,
   title         = {Working Memory Load Affects Oculomotor Performance in Mild Traumatic Brain Injury Patients with Protracted Recovery},
   author        = {Stubbs, Joseph L and Corrow, Shannon L and Soher, Victoria K and Maruta, Jun and Reisman, Noah and Ghajar, Jamshid},
   journal       = {Scientific Reports},
@@ -189,14 +213,14 @@
 
 @article{kelly2019combined,
   title         = {Oculomotor, Vestibular, and Reaction Time Effects of Sports-Related Concussion: Video-Oculography in Assessing Sports-Related Concussion},
-  author        = {Kelly, Kamryn M and Cazzoli, Dario and Guidotti, Lorenza and von Arx, Samuel and Müri, René M},
+  author        = {Kelly, Kamryn M and Kiderman, Alexander and Akhavan, Shahriar and Quigley, Matthew R and Snell, Eric D and Happ, Ellen and Synowiec, Andrea S and Miller, Emily R and Bauer, Micaela A and Oakes, Lauren P and Eydelman, Yelena and Gallagher, Catherine W and Dinehart, Trenton and Schroeder, Julia H and Ashmore, Ryan C},
   journal       = {Journal of Head Trauma Rehabilitation},
   volume        = {34},
   number        = {3},
   pages         = {176--188},
   year          = {2019},
-  doi           = {10.1089/neu.2018.5762},
-  pmid          = {30570500}
+  doi           = {10.1097/HTR.0000000000000437},
+  pmid          = {30234848}
 }
 
 @article{hunfalvay2021smooth,
@@ -237,15 +261,16 @@
   pmid          = {26453625}
 }
 
-@article{alvarez2021vergence,
-  title         = {Vision Therapy in Adults with Post-Concussion Syndrome},
-  author        = {Alvarez, Tara L and Scheiman, Mitchell and Santos, Elio M and Morales, Carlos and Yaramothu, Chirag and Yadav, Nabin K},
-  journal       = {Vision Research},
-  volume        = {188},
-  pages         = {144--160},
-  year          = {2021},
-  doi           = {10.1016/j.visres.2021.07.010},
-  pmid          = {34416431}
+@article{searle2016vergence,
+  title         = {Vergence Neural Pathways: {A} Systematic Narrative Literature Review},
+  author        = {Searle, Annabelle and Rowe, Fiona J},
+  journal       = {Neuroophthalmology},
+  volume        = {40},
+  number        = {5},
+  pages         = {209--218},
+  year          = {2016},
+  doi           = {10.1080/01658107.2016.1217028},
+  pmid          = {27928407}
 }
 
 @article{devani2024convergence,
@@ -259,6 +284,18 @@
   pmid          = {39716078}
 }
 
+@article{duprey2017convergence,
+  title         = {Convergence Insufficiency Identifies Athletes at Risk of Prolonged Recovery From Sport-Related Concussion},
+  author        = {DuPrey, Kathryn M and Webner, Deborah and Lyons, Allison and Kucuk, Cagatay H and Cronholm, Peter F and Halstead, Mark and McLeod, Tamara C Valovich},
+  journal       = {The American Journal of Sports Medicine},
+  volume        = {45},
+  number        = {10},
+  pages         = {2388--2393},
+  year          = {2017},
+  doi           = {10.1177/0363546517705640},
+  pmid          = {28498697}
+}
+
 @article{yaramothu2019vergence,
   title         = {Vergence Endurance Test: {A} Pilot Study for a Concussion Biomarker},
   author        = {Yaramothu, Chirag and Goodman, Alison M and Alvarez, Tara L},
@@ -268,7 +305,7 @@
   pages         = {2200--2212},
   year          = {2019},
   doi           = {10.1089/neu.2018.6077},
-  pmid          = {30681397}
+  pmid          = {30829134}
 }
 
 @article{wiecek2021vergence,
@@ -278,8 +315,7 @@
   volume        = {178},
   pages         = {87--97},
   year          = {2021},
-  doi           = {10.1016/j.visres.2020.10.001},
-  pmid          = {33120140}
+  doi           = {10.1016/j.visres.2020.10.001}
 }
 
 %% Review Articles and Meta-Analyses
@@ -297,23 +333,12 @@
 
 @incollection{gcs_statpearls,
   title         = {Glasgow Coma Scale},
-  author        = {Jain, Swati and Iverson, Lauren M},
+  author        = {Jain, Shobhit and Margetis, Konstantinos and Iverson, Lindsay M},
   booktitle     = {StatPearls},
   publisher     = {StatPearls Publishing},
   address       = {Treasure Island, FL},
   year          = {2024},
   url           = {https://www.ncbi.nlm.nih.gov/books/NBK513298/},
-  note          = {[Online; accessed 02-Nov-2025]}
-}
-
-@incollection{concussion_statpearls,
-  title         = {Concussion},
-  author        = {Lumba-Brown, Angela and Teramoto, Masaru and Bloom, Oliver J and Brody, David and Chesnutt, Jamshid and Clugston, James R and Collins, Michael and Gioia, Gerard and Kontos, Anthony P and Lal, Amaal and Sills, Allen},
-  booktitle     = {StatPearls},
-  publisher     = {StatPearls Publishing},
-  address       = {Treasure Island, FL},
-  year          = {2024},
-  url           = {https://www.ncbi.nlm.nih.gov/books/NBK537017/},
   note          = {[Online; accessed 02-Nov-2025]}
 }
 
@@ -338,6 +363,17 @@
   url           = {https://www.ncbi.nlm.nih.gov/books/NBK534786/},
   note          = {[Updated 2023 Aug 28; Online; accessed 02-Nov-2025]},
   pmid          = {30521207}
+}
+
+@article{mortaheb2021ppcs,
+  title         = {Neurophysiological Biomarkers of Persistent Post-concussive Symptoms: {A} Scoping Review},
+  author        = {Mortaheb, S and Filippini, M M and Kaux, J-F and Annen, J and Lejeune, N and Martens, G and Fuentes Calderón, M A and Laureys, S and Thibaut, A},
+  journal       = {Frontiers in Neurology},
+  volume        = {12},
+  pages         = {687197},
+  year          = {2021},
+  doi           = {10.3389/fneur.2021.687197},
+  pmid          = {34566837}
 }
 
 %% Epidemiology and Global Burden
@@ -426,20 +462,6 @@
   pmid          = {26381281}
 }
 
-%% Diagnostic Challenges
-
-@article{pozzato2020challenges,
-  title         = {Challenges in the acute identification of mild traumatic brain injuries: results from an emergency department surveillance study},
-  author        = {Pozzato, Ilaria and Meares, Susanne and Kifley, Annette and Craig, Ashley and Gillett, Mark and Van Vu, Kim and Liang, Anthony and Cameron, Ian and Gopinath, Bamini},
-  journal       = {BMJ Open},
-  volume        = {10},
-  number        = {2},
-  pages         = {e034494},
-  year          = {2020},
-  doi           = {10.1136/bmjopen-2019-034494},
-  pmid          = {32019818}
-}
-
 @article{silverberg2023acrm,
   title         = {The {American Congress of Rehabilitation Medicine} Diagnostic Criteria for Mild Traumatic Brain Injury},
   author        = {Silverberg, Noah D and Iverson, Grant L and Cogan, Alison and Dams-O'Connor, Kristen and Delmonico, Richard and Graf, Min Jeong P and Iaccarino, Mary Alexis and Kajankova, Maria and Kamins, Joshua and McCulloch, Karen L and McKinney, Gary and Nagele, Drew and Panenka, William J and Rabinowitz, Amanda R and Reed, Nick and Wethe, Jennifer V and Whitehair, Victoria and {ACRM Brain Injury Special Interest Group Mild TBI Task Force}},
@@ -474,13 +496,14 @@
   number        = {11},
   pages         = {689--691},
   year          = {2023},
-  doi           = {10.1136/bjsports-2023-107071}
+  doi           = {10.1136/bjsports-2023-107071},
+  pmid          = {37316201}
 }
 
 %% Neuroimaging Studies
 
-@article{lee2008neuroimaging,
-  title         = {Neuroimaging in Traumatic Brain Imaging},
+@article{lee2005neuroimaging,
+  title         = {Neuroimaging in Traumatic Brain Injury},
   author        = {Lee, Hing and Wintermark, Max and Gean, Alisa D and Ghajar, Jamshid and Manley, Geoffrey T and Mukherjee, Pratik},
   journal       = {NeuroRx},
   volume        = {2},
@@ -493,7 +516,7 @@
 
 @article{huang2024mri,
   title         = {Comparative Efficacy of {MRI} and {CT} in Traumatic Brain Injury: {A} Systematic Review},
-  author        = {Huang, Eric Y and Gupta, Kratika and Chin, Amy L and Provias, John and Yan, Ellene},
+  author        = {Dabas, Muath M and Alameri, Abrar D and Mohamed, Noor M and Mahmood, Rabia and Kim, Dong Hwi and Samreen, Mubushra and Kim, Ji Woo and Shehryar, Abdullah and Gyambrah, Samantha and Bedros, Adees W and Rehman, Abdur and Khan, Safdar},
   journal       = {Cureus},
   volume        = {16},
   number        = {10},
@@ -561,19 +584,7 @@
   pages         = {782--789},
   year          = {2018},
   doi           = {10.1016/S1474-4422(18)30231-X},
-  pmid          = {30122491}
-}
-
-@article{okonkwo2020gfap,
-  title         = {GFAP-BDP as an Acute Diagnostic Marker in Traumatic Brain Injury: {R}esults from the Prospective Transforming Research and Clinical Knowledge in Traumatic Brain Injury Study},
-  author        = {Okonkwo, David O and Yue, John K and Puccio, Ava M and Panczykowski, David M and Inoue, Tomoo and McMahon, Patrick J and Sorani, Marco D and Yuh, Esther L and Lingsma, Hester F and Maas, Andrew I R and Valadka, Alex B and Manley, Geoffrey T},
-  journal       = {Journal of Neurotrauma},
-  volume        = {30},
-  number        = {17},
-  pages         = {1490--1497},
-  year          = {2013},
-  doi           = {10.1089/neu.2013.2883},
-  pmid          = {23489259}
+  pmid          = {30054151}
 }
 
 @misc{fda2018banyan,
@@ -586,7 +597,7 @@
 
 %% Systematic Reviews on Diagnostic Accuracy
 
-@article{nelson2016diagnostic,
+@article{nelson2013diagnostic,
   title         = {Diagnostic Accuracy Studies in Mild Traumatic Brain Injury: {A} Systematic Review and Descriptive Analysis of Published Evidence},
   author        = {Nelson, Lindsay D and Janecek, Jacqueline K and McCrea, Michael A},
   journal       = {Journal of Neurotrauma},
